k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: findee-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - findmus.com
      secretName: findee-tls

  rules:
    - host: findmus.com
      http:
        paths:
          - path: /
            pathType: Prefix
            # Forward matching requests to the service on port 3002.
            backend:
              service:
                name: findee-service
                port:
                  number: 3002
